--- a/root/css/common.css
+++ b/root/css/common.css
@@ -3,6 +3,32 @@
  * Common styles for the ECL website
  */
 
+/*
+ *  Reset some default styles
+ */
+body,
+h1,
+h2,
+h3,
+p,
+ul,
+li {
+    margin: 0;
+    padding: 0;
+}
+
+/*
+ * Base styles
+ */
 body {
-    margin: auto;
+    font-family: sans-serif;
+    line-height: 1.6;
+}
+
+/*
+ * Main content area
+ */
+main {
+    padding: 2rem;
+    min-height: 400px;
 }
