--- a/root/css/common.css
+++ b/root/css/common.css
@@ -21,7 +21,7 @@ li {
  * Base styles
  */
 body {
-    font-family: sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     line-height: 1.6;
 }
 
