--- a/root/partials/header.html
+++ b/root/partials/header.html
@@ -1,11 +1,13 @@
 <header class="site-header">
-    <div class="site-title">電子商取引研究室</div>
-    <nav class="site-nav">
-        <a href="/research/">- Research</a>
-        <a href="/members/">- Members</a>
-        <a href="/news/">- News</a>
-        <a href="/for-students/">- For Students</a>
-        <a href="/for-industry/">- For Industry</a>
-        <a href="/for-seminar/">- For Seminar</a>
-    </nav>
+    <div class="header-container">
+        <div class="site-title">電子商取引研究室</div>
+        <nav class="site-nav">
+            <a href="/research/">- Research</a>
+            <a href="/members/">- Members</a>
+            <a href="/news/">- News</a>
+            <a href="/for-students/">- For Students</a>
+            <a href="/for-industry/">- For Industry</a>
+            <a href="/for-seminar/">- For Seminar</a>
+        </nav>
+    </div>
 </header>
