--- a/root/partials/header.html
+++ b/root/partials/header.html
@@ -1,6 +1,8 @@
 <header class="site-header">
     <div class="header-container">
-        <div class="site-title">電子商取引研究室</div>
+        <h1 class="site-title">
+            <a href="/"><div class="site-title">電子商取引研究室</div></a>
+        </h1>
         <nav class="site-nav">
             <a href="/research/">- Research</a>
             <a href="/members/">- Members</a>
