--- a/root/css/common.css
+++ b/root/css/common.css
@@ -29,6 +29,10 @@ body {
  * Main content area
  */
 main {
-    padding: 2rem;
+    /*padding: 2rem;*/
     min-height: 400px;
+}
+
+img.mainImage {
+    max-width: 1171px;
 }
