--- a/root/css/common.css
+++ b/root/css/common.css
@@ -23,6 +23,7 @@ li {
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     line-height: 1.6;
+    width: 100%;
 }
 
 /*
