--- a/root/css/home.css
+++ b/root/css/home.css
@@ -9,7 +9,7 @@ body {
 
 .box {
     display: grid;
-    grid-template-columns: 2fr 2fr;
+    grid-template-columns: 2fr 2fr 2fr;
     gap: 2rem;
     margin: auto;
 }
