--- a/root/news/news.css
+++ b/root/news/news.css
@@ -34,7 +34,6 @@ main {
     /* 親の .box の幅を均等に分割する */
     flex: 1; 
     
-    /* ボックスの高さを設定 (画像では高さが不足しているため) */
     height: 455px; 
     
     /* ボックスの背景色と影で立体感を出す */
@@ -45,25 +44,25 @@ main {
     /* テキストを上下中央・左右中央に配置する設定 */
     display: flex; 
     flex-direction: column; /* テキストを縦に並べる */
-    align-items: right; /* 水平方向 (左右) 中央揃え */
+    align-items: right; /* 水平方向中央揃え */
     
     padding: 50px;
     padding-top: 30px;
 }
 
 .newsbox p, .eventsbox p {
-    font-size: 1.1em; /* フォントサイズを少し大きく */
+    font-size: 1.1px; /* フォントサイズを少し大きく */
     color: #333;
     margin: 5px 0; /* <p>要素の上下マージンを調整 */
 }
 
 .box ul li{
-    padding-top: 5px;
+    padding-top: 5px; /*リストの間隔 */
     padding-bottom: 5px;
 }
 
 .newstitle{
-    order: 1;
+    order: 1; /*orderで順番を指定する。 */
 }
 
 .eventstitle{
@@ -79,6 +78,6 @@ main {
 }
 
 .newstitle, .eventstitle{
-    text-align: center;
-    font-size: 40px;
+    text-align: center; 
+    font-size: 40px;  /*テキストの中央揃え*/
 }
