--- a/root/research/research.css
+++ b/root/research/research.css
@@ -14,11 +14,16 @@ body {
     margin: auto;
 }
 
-.box p{
+.box h2{
     /* background-color: rgb(202, 223, 252); */
     display: flex; /* Flexboxを有効にする */
     align-items: center; /* 子要素を垂直方向（上下）の中央に揃える */
     justify-content: center;
     background: linear-gradient(90deg, rgb(217 237 255), rgb(222, 246, 253));
     height: 60px;
+}
+
+.thema{
+    border: 1px solid #e0e0e0;
+    height: 300px;
 }
