--- a/root/for-students/for-students.css
+++ b/root/for-students/for-students.css
@@ -6,3 +6,58 @@
 body {
     margin: auto;
 }
+
+main {
+    padding-top: 50px; /* ヘッダーの下に余白を設ける */
+    padding-bottom: 50px;
+}
+
+.box {
+    /* newsboxとeventsboxを横並びにする */
+    /* display: flex;  */
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    /* newsboxとeventsboxの間に隙間を作る */
+    column-gap: 50px;
+    row-gap: 30px; 
+    
+    /* 横幅を制限し、中央に配置 */
+    width: 80%; 
+    margin: 0 auto; 
+}
+
+.Senior-Students, .work {
+    /* 親の .box の幅を均等に分割する */
+    flex: 1; 
+    
+    height: 455px; 
+    
+    /* ボックスの背景色と影で立体感を出す */
+    background-color: #e6f7ff; /* ボックスの背景を白に */
+    border: 1px solid #e0e0e0; /* 細い枠線 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05); /* ほんのりとした影 */
+    
+    /* テキストを上下中央・左右中央に配置する設定 */
+    display: flex; 
+    flex-direction: column; /* テキストを縦に並べる */
+    align-items: right; /* 水平方向中央揃え */
+    
+    padding: 50px;
+    padding-top: 30px;
+}
+
+.Senior-Students p, .work p {
+    font-size: 20px; /* フォントサイズを少し大きく */
+    color: #333;
+    margin: 5px 0; /* <p>要素の上下マージンを調整 */
+}
+
+.box ul li{
+    padding-top: 5px; /*リストの間隔 */
+    padding-bottom: 5px;
+}
+
+.box a{
+    size: 20px;
+    text-decoration: underline;
+}
