--- a/root/research/research.css
+++ b/root/research/research.css
@@ -25,5 +25,9 @@ body {
 
 .thema{
     border: 1px solid #e0e0e0;
-    height: 300px;
+    height: 200px;
+}
+
+.box .thema p{
+    padding: 10px 20px;
 }
